updates to try and enable screenshots

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTK4 REQUIRED gtk4)
 pkg_check_modules(WEBKIT REQUIRED webkitgtk-6.0)
 pkg_check_modules(JSONCPP REQUIRED jsoncpp)
-pkg_check_modules(CAIRO REQUIRED cairo)  # Add this line
+pkg_check_modules(CAIRO REQUIRED cairo)
 
 
 include_directories(${WEBKIT_INCLUDE_DIRS})
@@ -26,7 +26,7 @@ target_link_libraries(hweb-poc
     ${GTK4_LIBRARIES}
     ${WEBKIT_LIBRARIES}
     ${JSONCPP_LIBRARIES}
-    ${CAIRO_LIBRARIES}  # Add this line
+    ${CAIRO_LIBRARIES}
 )
 
 # In the target_include_directories section, add:
@@ -34,5 +34,5 @@ target_include_directories(hweb-poc PRIVATE
     ${GTK4_INCLUDE_DIRS}
     ${WEBKIT_INCLUDE_DIRS}
     ${JSONCPP_INCLUDE_DIRS}
-    ${CAIRO_INCLUDE_DIRS}  # Add this line
+    ${CAIRO_INCLUDE_DIRS}
 )
