--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(hweb-poc)
+project(hweb)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -11,12 +11,11 @@ pkg_check_modules(JSONCPP REQUIRED jsoncpp)
 pkg_check_modules(CAIRO REQUIRED cairo)
 pkg_check_modules(GDKPIXBUF REQUIRED gdk-pixbuf-2.0)
 
-
 include_directories(${WEBKIT_INCLUDE_DIRS})
 include_directories(${JSONCPP_INCLUDE_DIRS})
 include_directories(${GDKPIXBUF_INCLUDE_DIRS})
 
-add_executable(hweb-poc
+add_executable(hweb
     src/main.cpp
     src/Session/Session.cpp
     src/Session/Manager.cpp
@@ -29,10 +28,15 @@ add_executable(hweb-poc
     src/Browser/Session.cpp
     src/Browser/Screenshot.cpp
     src/Browser/Utilities.cpp
+    src/Assertion/Manager.cpp  
+    src/Assertion/Manager.h  
+    src/Assertion/OutputFormatter.cpp  
+    src/Assertion/OutputFormatter.h  
+    src/Assertion/Types.h
+
 )
 
-# In the target_link_libraries section, add:
-target_link_libraries(hweb-poc 
+target_link_libraries(hweb 
     ${GTK4_LIBRARIES}
     ${WEBKIT_LIBRARIES}
     ${JSONCPP_LIBRARIES}
@@ -40,8 +44,7 @@ target_link_libraries(hweb-poc
     ${GDKPIXBUF_LIBRARIES}
 )
 
-# In the target_include_directories section, add:
-target_include_directories(hweb-poc PRIVATE 
+target_include_directories(hweb PRIVATE 
     ${GTK4_INCLUDE_DIRS}
     ${WEBKIT_INCLUDE_DIRS}
     ${JSONCPP_INCLUDE_DIRS}
