--- a/src/Browser/CMakeLists.txt
+++ b/src/Browser/CMakeLists.txt
@@ -1,30 +1,29 @@
-# Browser module CMakeLists.txt
-
 set(BROWSER_SOURCES
     Browser.cpp
-    BrowserCore.cpp
-    BrowserJavaScript.cpp
-    BrowserEvents.cpp
-    BrowserDOM.cpp
-    BrowserStorage.cpp
-    BrowserSession.cpp
-    BrowserScreenshot.cpp
-    BrowserUtilities.cpp
+    Core.cpp
+    JavaScript.cpp
+    Events.cpp
+    DOM.cpp
+    Storage.cpp
+    Session.cpp
+    Screenshot.cpp
+    Utilities.cpp
+    Wait.cpp
 )
 
-# Create list with full paths
+set(BROWSER_HEADERS
+    Browser.h
+    WebKitCompat.h
+)
+
 set(BROWSER_MODULE_SOURCES "")
 foreach(source ${BROWSER_SOURCES})
     list(APPEND BROWSER_MODULE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${source}")
 endforeach()
 
-# Export to parent scope
-set(BROWSER_MODULE_SOURCES ${BROWSER_MODULE_SOURCES} PARENT_SCOPE)
+set(BROWSER_MODULE_HEADERS "")
+foreach(header ${BROWSER_HEADERS})
+    list(APPEND BROWSER_MODULE_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/${header}")
+endforeach()
 
-# Optional: Create a static library
-# add_library(browser_module STATIC ${BROWSER_SOURCES})
-# target_include_directories(browser_module PUBLIC 
-#     ${CMAKE_CURRENT_SOURCE_DIR}/..
-#     ${GTK_INCLUDE_DIRS}
-#     ${WEBKIT_INCLUDE_DIRS}
-# )
+target_sources(hweb PRIVATE ${BROWSER_MODULE_SOURCES})
